templates/pod-defaulter_template.yaml
---
# Source: pod-defaulter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pod-defaulter
  labels:
    helm.sh/chart: pod-defaulter-0.1.3
    app.kubernetes.io/name: pod-defaulter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: pod-defaulter
    app.kubernetes.io/instance: release-name
---
# Source: pod-defaulter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pod-defaulter
  labels:
    helm.sh/chart: pod-defaulter-0.1.3
    app.kubernetes.io/name: pod-defaulter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pod-defaulter
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: pod-defaulter
        app.kubernetes.io/name: pod-defaulter
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-pod-defaulter
      securityContext:
        {}
      containers:
        - name: pod-defaulter
          args:
            - --tls-cert=/etc/webhook/certs/cert.pem
            - --tls-key=/etc/webhook/certs/key.pem
            - -v=2
          securityContext:
            {}
          image: "softonic/pod-defaulter:0.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /
              port: https
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /
              port: https
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          resources:
            {}
      volumes:
        - name: webhook-certs
          secret:
            secretName: release-name-pod-defaulter
---
# Source: pod-defaulter/templates/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-pod-defaulter
  labels:
    helm.sh/chart: pod-defaulter-0.1.3
    app.kubernetes.io/name: pod-defaulter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: release-name-pod-defaulter.default.svc.cluster.local
    objectSelector:
      matchExpressions:
        - key: app
          operator: NotIn
          values: ["pod-defaulter"]
    clientConfig:
      caBundle: 
      service:
        name: release-name-pod-defaulter
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    admissionReviewVersions:
    - "v1beta1"
    - "v1"
